# Claudius

./: .gitmodules  README.md  claudius.opam  claudius.opam.template  dune  dune-project
.github/workflows/: main.yml
doc/: index.mld
fonts/: README.md
src/: animation.ml  animation.mli  base.ml  base.mli  dune  event.ml  event.mli  font.ml  font.mli  fontv2.ml  framebuffer.ml  framebuffer.mli  key.ml  key.mli  key_sdl.ml  key_sdl.mli  keysdl.ml  keysdl.mli  mock_sdl.ml  mouse.ml  mouse.mli  mousesdl.ml  mousesdl.mli  overlay.ml  overlay.mli  palette.ml  palette.mli  picture.ml  picture.mli  primitives.ml  primitives.mli  run_loop.ml  screen.ml  screen.mli  screenshot.ml  screenshot.mli  sdl_api.mli  sdl_mock.ml  stats.ml  stats.mli  (+3 more)
test/: dune  test_animation.ml  test_events.ml  test_framebuffer.ml  test_keysdl.ml  test_mousesdl.ml  test_palette.ml  test_picture.ml  test_primitives.ml  test_run_loop.ml  test_screen.ml  test_screenshot.ml  test_stats.ml  test_utils.ml
test_assets/: tetris.png:Zone.Identifier
